--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Awesome Research Group
-url: http://awesome.example.edu
+name: Lowary Research Group
+url: http://www.chem.ualberta.ca/~lowary/
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
 
