--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ permalink: /blog/:year/:month/:day/:title.html
 
 # Sections on the "people" page.
 roles:
-  - key: faculty
-    name: Faculty
+  - key: pi
+    name: Group Leader
   - key: staff
-    name: Staff
+    name: Technicians
   - key: postdoc
-    name: Researchers
+    name: Postdoctoral Fellows
   - key: grad
     name: Graduate Students
   - key: ugrad
@@ -27,6 +27,10 @@ roles:
     name: Collaborators
   - key: alum
     name: Alumni
+  - key: ra
+    name: Research Associates
+  - key: vstudent
+    name: Visiting Students    
 
 # Number of news stories on the front page.
 front_page_news: 8
@@ -44,10 +48,8 @@ navigation:
   - title: Home
     link: /
   - title: People
-    link: /#people
+    link: /people.html
   - title: Research
     link: /research.html
   - title: Publications
     link: /publications.html
-  - title: Code
-    link: /code.html
