--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,54 +1,40 @@
 
-prof-a:
-    display_name: "Prof A"
-    role: faculty
-
-prof-b:
-    display_name: "Prof B"
-    role: faculty
-
-prof-c:
-    display_name: "Prof C"
-    role: faculty
-
-profx:
-    display_name: "Professor X"
-    webpage: "http://en.wikipedia.org/wiki/Professor_X"
-    github: profx
-    role: faculty
-    image: /img/people/prof-x.png
-    bio: Professor
-
-scott:
-    display_name: "Scott Summers"
-    webpage: "http://en.wikipedia.org/wiki/Cyclops_(comics)"
-    role: staff
+Todd:
+    display_name: "Todd Lowary"
+    role: pi
     image: /img/people/scott.png
     bio: aka Cyclops
 
+Blake:
+    display_name: "Blake Zheng"
+    role: staff
+    image: /img/people/blake.JPG
+    bio: 
+
 wolverine:
     display_name: "Wolverine"
-    webpage: "http://en.wikipedia.org/wiki/Wolverine_%28comics%29"
+
     github: wolverine
     role: postdoc
 
 storm:
     display_name: "Storm"
     webpage: "http://en.wikipedia.org/wiki/Storm_%28Marvel_Comics%29"
-    role: grad
+    role: ra
     image: /img/people/storm.png
 
-grad-a:
-    display_name: "Grad A"
+Fazheng:
+    display_name: "Fazheng Han"
     role: grad
+    bio: sdfsdfsdfsdfsfdsf
 
 grad-b:
     display_name: "Graduate Student B With Long Name"
-    role: grad
+    role: vstudent
 
 grad-c:
     display_name: "Grad C"
-    role: grad
+    role: ugrad
 
 grad-d:
     display_name: "Grad D"
