--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ roles:
     name: Research Associates
   - key: vstudent
     name: Visiting Students    
-
+  - key: vscholar
+    name: Visiting scholar    
 # Number of news stories on the front page.
 front_page_news: 8
 
@@ -53,3 +54,5 @@ navigation:
     link: /research.html
   - title: Publications
     link: /publications.html
+  - title: Links
+    link: /links.html
